# desktop-test

./: -- @block Bookmarked query.sql  README.md  mariadb.session.sql
cmaketutorial/t1-helloworld/: CMakeLists.txt  main.cpp
cuda/: test.c
insidethec++objectmodel/: test01  test01.cpp
moreeffectivec++/: test01  test01.cpp  test02  test02.cpp  test03  test03.cpp  test04.cpp  test05  test05.cpp  test06  test06.cpp  test07.cpp  test08  test08.cpp  test09  test09.cpp  test10  test10.cpp
ruminationsonc++/: test01  test01.cpp  test02  test02.cpp  test03  test03.cpp
test0/: alia  alia.cpp  complex  complex.cpp  main  main.cpp  t  t.cpp  test  test.c  test.cpp  test.py  test01  test01.cpp  test03  test03.cpp  test04  test04.cpp  test05  test05.cpp  test06  test06.cpp
testboost/: test01  test01.cpp
testclassdesign/: test01  test01.cpp  test02  test02.cpp  test03  test03.cpp  test04  test04.cpp  test05.cpp  test06  test06.cpp  test07  test07.cpp  test08  test08.cpp  test09  test09.cpp  test10.cpp
testeffectivec++/: Date.hpp  Day.hpp  Month.hpp  Person.cpp  Person.h  PersonImpl.cpp  PersonImpl.h  Rational.cpp  Rational.h  Uncopyable.hpp  Year.hpp  test01  test01.cpp  test02  test02.cpp  test03  test03.cpp  testPerson.cpp  testRational  testRational.cpp
testfinal/: test001  test001.cpp  test002  test002.cpp  test003  test003.cpp  test004.cpp  test01  test01.cpp  test02  test02.cpp  test03  test03.cpp  test04  test04.cpp  test05  test05.cpp  test06  test06.cpp
testlambda/: test01  test01.cpp
testmove/: main.cpp  mian.out  myheader.hpp  mystring.cpp  mystring.hpp  (+2 more)
(+197 files in other folders)
